...
fun FEmailBox(emailValue: String, onEvent: (ForgotPasswordEvent) -> Unit){
    DefaultFieldBox(
        currentValue = emailValue,
        onEvent = {onEvent(ForgotPasswordEvent.OnEmailChanged(it))},
        focusedColor = MaterialTheme.colorScheme.primary,
        unfocusedColor = Color.LightGray,
        label = "E-mail",
        type = "email",
        password = false
    )
}

@Composable
...
