...
            Box(contentAlignment = Alignment.BottomCenter) {
                IconButton(
                    onClick = { viewModel.onImageCapture(context, viewModel) },
                    content = {
                        Icon(
                            imageVector = Icons.Sharp.Lens,
                            contentDescription = "Take picture",
                            tint = Color.White,
                            modifier = Modifier
                                .size(125.dp)
                                .padding(30.dp)
                                .border(1.dp, Color.White, CircleShape)
                        )
...
